updates: JVM options for Clojure CLI